# email-notification-system

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
app/: main.py
app/api/: dependencies.py
app/api/routes/: health.py  notifications.py
app/core/: config.py  database.py  redis.py
app/models/: notification.py  schemas.py
app/services/: email.py  publisher.py
app/workers/: __main__.py  consumer.py  retry.py
dashboard/: main.py  routes.py
dashboard/templates/: dashboard.html
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial.py
tests/: conftest.py  test_api.py  test_email_service.py  test_workers.py
